<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_undraw_login_re_4vu2" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/title_login"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginImage"/>

    <RelativeLayout
        android:id="@+id/loginButtonBox"
        android:layout_width="250dp"
        android:layout_height="300dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginText"
        app:layout_constraintBottom_toBottomOf="parent" >

        <EditText
            android:id="@+id/etLoginEmail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_alignParentTop="true" />

        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_below="@+id/etLoginEmail" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/title_login"
            android:layout_above="@+id/signupButton" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/title_signup"
            android:layout_above="@+id/forgotPasswordButton" />

        <Button
            android:id="@+id/forgotPasswordButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_alignParentBottom="true"  />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>