<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.ChangePasswordFragment">

    <ImageView
        android:id="@+id/changePasswordImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_undraw_forgot_password_re_hxwm" />

    <TextView
        android:id="@+id/changePasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/title_change_password"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changePasswordImage"/>

    <RelativeLayout
        android:id="@+id/changePasswordButtonBox"
        android:layout_width="250dp"
        android:layout_height="300dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePasswordText"
        app:layout_constraintBottom_toBottomOf="parent" >

        <EditText
            android:id="@+id/etChangePasswordEmail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text"
            android:layout_alignParentTop="true" />

        <Button
            android:id="@+id/savePasswordButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_above="@id/cancelPasswordButton"  />

        <Button
            android:id="@+id/cancelPasswordButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_alignParentBottom="true"  />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>