<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.SignupFragment">

    <ImageView
        android:id="@+id/signupImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_undraw_happy_feeling_slmw" />

    <TextView
        android:id="@+id/signupText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/title_signup"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupImage"/>

    <RelativeLayout
        android:id="@+id/signupButtonBox"
        android:layout_width="250dp"
        android:layout_height="300dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupText"
        app:layout_constraintBottom_toBottomOf="parent" >

        <EditText
            android:id="@+id/etSignupEmail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_alignParentTop="true" />

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:layout_below="@+id/etSignupEmail" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:layout_below="@+id/etNewPassword" />

        <Button
            android:id="@+id/savePasswordButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/title_signup"
            android:layout_alignParentBottom="true"  />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>