<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.NewUserFragment">

    <ImageView
        android:id="@+id/newUserImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_undraw_people_re_8spw" />

    <TextView
        android:id="@+id/newUserText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/title_new_user"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newUserImage"/>

    <RelativeLayout
        android:id="@+id/changePasswordButtonBox"
        android:layout_width="250dp"
        android:layout_height="300dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newUserText"
        app:layout_constraintBottom_toBottomOf="parent" >

        <Button
            android:id="@+id/newUserButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:layout_above="@id/returningUserButton"  />

        <Button
            android:id="@+id/returningUserButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/no_returning"
            android:layout_alignParentBottom="true"  />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>