<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.login.EnterDetailsFragment">

    <ImageView
        android:id="@+id/enterDetailsImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="52dp"
        android:src="@drawable/ic_undraw_mobile_user_re_xta4"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enterDetailsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/title_enter_details"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterDetailsImage" />

    <RelativeLayout
        android:id="@+id/changePasswordButtonBox"
        android:layout_width="251dp"
        android:layout_height="190dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterDetailsText">

        <EditText
            android:id="@+id/etName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" /><![CDATA[

        />













        ]]>

        <Spinner
            android:id="@+id/gradeSpinner"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etName"
            android:layout_marginStart="10dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:entries="@array/grade"
            android:spinnerMode="dialog" />

        <Button
            android:id="@+id/saveDetailsButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/save" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>